--- a/proyecto02/smart-horses/src/App.css
+++ b/proyecto02/smart-horses/src/App.css
@@ -3,6 +3,13 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: #c7c7c7;
+}
+
+body {
+  width: 100%;
+  margin: 0 auto;
+  background-color: #c7c7c7;
 }
 
 .logo {
@@ -39,4 +46,17 @@
 
 .read-the-docs {
   color: #888;
+}
+
+select option {
+  background-color: rgba(55, 55, 255, 0.9) !important; /* Slight transparent color for dropdown */
+  border-radius: 0.375rem; /* Rounded corners */
+}
+
+select:focus option {
+  background-color: rgba(0, 130, 46, 0.1) !important; /* Slight blue transparent color */
+}
+
+select:focus option:checked {
+  background-color: rgba(59, 10, 246, 0.3); /* More blue transparent color */
 }
